Thu Jun 25 00:50:47 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* docs/presentations/europython2009.odp: First draft of slides for
	  europython.

Thu Jun 25 00:50:06 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* docs/api.rst: Minor tweaks - typos and parameter names.

Fri Jun 19 12:38:01 BST 2009  Tom Mortimer <tom@flax.co.uk>

	* flax/searchserver/backends/xappy_backend.py,
	  flax/searchserver/application.py: Added provisional feature for
	  returning terms for a specified field.

Thu Jun 11 12:55:40 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* flax/searchserver/backends/xappy_backend.py: Remove debug print.

Tue Jun 09 22:39:11 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* flax/searchserver/backends/xappy_backend.py: Pass default_op to
	  correct parameter.

Tue Jun 09 20:27:43 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* flax/searchserver/application.py,
	  flax/searchserver/backends/base_backend.py,
	  flax/searchserver/backends/xappy_backend.py: Add default_op to
	  search_simple.

Tue Jun 09 20:25:08 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* flax/searchserver/queries.py: Add default_op to QueryText.

Tue Jun 09 18:51:13 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* flax/searchserver/application.py: Allow empty strings for the
	  highlighting parameters.

Mon Jun  1 12:57:14 BST 2009  Tom Mortimer <tom@lemurconsulting.com>

	* docs/future.rst,docs/api.rst,
	  flax/searchserver/backends/xappy_backend.py,
	  flax/searchserver/application.py: Added summarisation to search
	  interfaces, and documented (minimally!)

Fri May 29 15:47:56 BST 2009  Tom Mortimer <tom@lemurconsulting.com>

	* docs/api.rst,docs/future.rst: Moved/changed description of
	  proposed doc summary API.

Thu May 21 16:20:38 BST 2009  Tom Mortimer <tom@lemurconsulting.com>

	* docs/future.rst,docs/api.rst: Split off documentation of